update question service
